<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/crv_city"
    android:layout_margin="@dimen/card_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="189dp">

        <TextView
            android:id="@+id/txv_firstname"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="15pt" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/btn_edit"
            android:contentDescription="@string/delete"
            android:src="@android:drawable/ic_menu_delete" />

        <TextView
            android:id="@+id/txv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_location"
            android:text="Code Postal"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/txv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txv_firstname"
            android:text="Location"
            android:textSize="10pt"

            />

        <TextView
            android:id="@+id/txv_habit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_code"
            android:text="Number Habit"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/txv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_habit"
            android:text="Country"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/txv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txv_country"
            android:text="Type"
            android:textSize="10pt" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/edit"
            android:src="@android:drawable/ic_menu_edit" />

    </RelativeLayout>


</android.support.v7.widget.CardView>